# MetaGalaxy

./: LICENSE  README.md  environment.yml  install.sh
data/: install_database.py
galaxy_workflows/: MetaGalaxy.ga  MetaGalaxy_4x_polishing.ga
galaxy_wrapper/: Krona.xml  README.md  meta_flye.xml
lib/: install.sh
lib/Bandage/build_scripts/: bandage_build_windows.bat  bandage_build_windows_32bit.bat
lib/Bandage/ogdf/internal/basic/: PoolMemoryAllocator.h
lib/Bandage/ogdf/internal/energybased/: MultilevelGraph.h
lib/Flye/: .gitignore  Makefile  setup.py
lib/Flye/docs/: FAQ.md  NEWS.md  USAGE.md
lib/Flye/flye/: main.py
lib/Flye/flye/assembly/: assemble.py  repeat_graph.py  scaffolder.py
lib/Flye/flye/config/: configurator.py  py_cfg.py
lib/Flye/flye/config/bin_cfg/: asm_raw_reads.cfg
lib/Flye/flye/polishing/: alignment.py  bubbles.py  consensus.py  polish.py
lib/Flye/flye/repeat_graph/: repeat_graph.py
lib/Flye/flye/trestle/: divergence.py  trestle.py
lib/Flye/flye/utils/: fasta_parser.py  sam_parser.py
lib/Flye/src/: Makefile
lib/Flye/src/polishing/: bubble_processor.cpp
lib/Flye/src/repeat_graph/: multiplicity_inferer.cpp
lib/Flye/src/sequence/: overlap.cpp  overlap.h  vertex_index.cpp  vertex_index.h
lib/metabat/: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  INSTALL.md  bitbucket-pipelines.yml  metabat_version.h.in  runMetaBat.sh
lib/metabat/.edison_deploy/: build.sh  env.sh  install.sh  test.sh
lib/metabat/.genepool_deploy/: env.sh
lib/metabat/MetaBAT2PaperSupplementaryScripts/: README  benchmark.R  binning.R  runBBmap.sh
lib/metabat/cmake/: git-watcher.cmake  htslib.cmake  zlib.cmake
lib/metabat/src/: BamUtils.h  CMakeLists.txt  CheckRead.hpp  IOThreadBuffer.h  KseqReader.h  OpenMP.h  ProgressTracker.h  RunningStats.h  SafeOfstream.hpp  contigOverlaps.cpp  igraph.h  jgi_summarize_bam_contig_depths.cpp  jgi_summarize_bam_contig_depths.h  metabat1.cpp  metabat1.h  metabat2.cpp  metabat2.h  ranker.h  tile.h
lib/quast/quast_libs/bedtools/src/utils/Contexts/: ContextClosest.cpp
lib/quast/quast_libs/bedtools/src/utils/NewChromsweep/: CloseSweep.cpp  CloseSweep.h  NewChromsweep.cpp
lib/quast/quast_libs/bedtools/src/utils/RecordOutputMgr/: RecordOutputMgr.cpp  RecordOutputMgr.h
lib/samtools/: .appveyor.yml
user_case_results/Galaxy_results/: Assembly_QC.html  Assembly_visualisation.txt  Contig_taxonomies.tsv  Filtered_read_QC.html  Filtered_read_QC.txt  Raw_read_QC.html  Raw_read_QC.txt  Taxonomy.txt  Taxonomy_chart.html  contig_AMR.tab  icarus.html
user_case_results/MetaGalaxy_results/: assembly_quality_assessment.html  plasmid_reads.fastq  plasmid_reads.tab  taxonomy_bins.html  taxonomy_bins.txt  taxonomy_chart_raw-reads_ndb.html  taxonomy_chart_raw-reads_pdb.html
user_case_results/MetaGalaxy_results/anti-microbial_resistance/: amr_results.tab  amr_summary.tab  plasmid_amr_results.tab  plasmid_amr_summary.tab
user_case_results/MetaGalaxy_results/filtered_read_quality/: filtered_read_quality_NanoPlot-report.html  filtered_read_quality_NanoStats.txt
user_case_results/MetaGalaxy_results/meta_bins/: bin  bin.2.fa
user_case_results/MetaGalaxy_results/meta_bins/unbinned_contigs/: bin.lowDepth.fa  bin.tooShort.fa  bin.unbinned.fa
user_case_results/MetaGalaxy_results/raw_read_quality/: raw_read_quality_NanoPlot-report.html  raw_read_quality_NanoStats.txt
user_case_results/MetaGalaxy_results/taxonomy_raw_reads/: taxonomy_raw-reads_genus_ndb.txt  taxonomy_raw-reads_genus_pdb.txt  taxonomy_raw-reads_species_ndb.txt  taxonomy_raw-reads_species_pdb.txt
